Targets can now be public/private (I don't think alarms are sensitive enough to sanitize them out) Added a corresponding action on frontend, bruno request, ofc regenerated API docs Added "soft-auth" functionality in the auth middleware - requests with no token or a valid token go through, requests with invalid tokens are denied Soft auth will be used for some endpoints, obviously not for all
